# InteractiveProjectionLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  calib  calibration.cpp  cam  code  code.cpp  homography  homography.cpp  opencvtest.cpp  out_camera_data.yml  sample.cpp  shadow_based.cpp  sound_based.cpp  source.cpp  time  untitled.cpp
include/: InteractiveProjection.hpp  iplib.hpp
others/code examples/: code.cpp  detectingHand  detectingHand.cpp  homography.cpp  largest hull.cpp  rectangle.cpp  shadow_based.cpp  time.cpp  view_based.cpp
sample/: sample.cpp
src/: InteractiveProjection.cpp  source.cpp
